add email lib
